--- a/config/disambiguate.yaml
+++ b/config/disambiguate.yaml
@@ -1,7 +1,7 @@
 # example configuration file for rna-seq analysis
 cluster:
   name: odyssey # arbitrary name
-  profile: lsf # ipython profile to run under
+  profile: lsf3 # ipython profile to run under
   cores: 2 # number of ipython engines to spin up
   timeout: 10000 # time to wait for the cluster to be up before failing
   delay: 20 # the delay in spinning up engines once the controller is up
