--- a/config/human_mapping.yaml
+++ b/config/human_mapping.yaml
@@ -1,8 +1,8 @@
 # example configuration file for rna-seq analysis
 cluster:
   name: odyssey # arbitrary name
-  profile: lsf # ipython profile to run under
-  cores: 2 # number of ipython engines to spin up
+  profile: lsf2 # ipython profile to run under
+  cores: 4 # number of ipython engines to spin up
   timeout: 10000 # time to wait for the cluster to be up before failing
   delay: 20 # the delay in spinning up engines once the controller is up
 
